# todo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp  project.cpp  project.hpp  task.hpp
date/: scanner.hpp
include/: json.hpp
src/: README.txt  main.cpp  main.hpp  project.cpp  project.hpp  task.cpp  task.hpp
src/date/: scanner.cpp  scanner.hpp  token.cpp  token.hpp
src/text/: color.cpp  color.h  color.hpp  string_formatter.cpp  string_formatter.h  string_formatter.hpp
src/view/gui/: gui.cpp
src/view/terminal/: view.cpp  view.hpp
